--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -1,13 +1,13 @@
 <app-menu></app-menu>
 <ng4-loading-spinner> </ng4-loading-spinner>
-<div class=" main-class" >
+<div class=" main-class">
   <div class="primary-container">
     <header class="header">
       <div class="heading4">{{'Employee Attendance' | translate}}</div>
     </header>
 
     <div class="addbtn">
-      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal" >{{'Add Employee Attendance'| translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add Employee Attendance'| translate}}
       </button>
       <div class="input-group input-group-lg searchButton">
         <input type="date" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="date">
@@ -20,25 +20,29 @@
     </div>
     <div layout="row" class="userlist " (load)="startLoadingSpinner()">{{'Attendance List' | translate}}</div>
     <div>
-        <div class="green-circle"></div>
-        <div class="lable-description">Present Employee</div>
-        <div class="red-circle"></div>
-        <div class="lable-description">Absent Employee</div>
-      </div>
-        <br>
+      <div class="green-circle"></div>
+      <div class="lable-description">Present Employee</div>
+      <div class="red-circle"></div>
+      <div class="lable-description">Absent Employee</div>
+    </div>
+    <br>
     <table class="table table-striped table-hover table-fixed settable" [mfData]="allAttendance" #mf="mfDataTable">
       <thead>
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
-          <th class="col-xs-2"><mfDefaultSorter by="employee.userid" class="col-xs-2">{{'EmployeeId'|translate}}</mfDefaultSorter></th>
+          <th class="col-xs-2">
+            <mfDefaultSorter by="employee.userid" class="col-xs-2">{{'EmployeeId'|translate}}</mfDefaultSorter>
+          </th>
           <th class="col-xs-2">{{ 'Intime' | translate }}</th>
           <th class="col-xs-2">{{ 'Outtime' | translate }}</th>
-          <th class="col-xs-2" style="margin-right: -20px;"><mfDefaultSorter by="date" class="col-xs-2">{{ 'Date' | translate }}</mfDefaultSorter> </th>
+          <th class="col-xs-2" style="margin-right: -20px;">
+            <mfDefaultSorter by="date" class="col-xs-2">{{ 'Date' | translate }}</mfDefaultSorter>
+          </th>
           <th class="col-xs-1">{{ 'Status' | translate }}</th>
           <th class="col-xs-2" style="margin-left: 20px">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let attendance of mf.data |filter :date | paginate: { itemsPerPage: 8, currentPage: p} let i = index;"[ngStyle]="{'color':attendance.status === 'Leave'|| attendance.status === 'Absent' ? 'red' : 'green' }">
+      <tr *ngFor="let attendance of mf.data |filter :date | paginate: { itemsPerPage: 8, currentPage: p} let i = index;" [ngStyle]="{'color':attendance.status === 'Leave'|| attendance.status === 'Absent' ? 'red' : 'green' }">
         <td class="tablerow col-xs-1">{{i+1}}</td>
         <td class="tablerow col-xs-2  ">{{attendance.employee.userid}}</td>
         <td class="tablerow col-xs-2">{{attendance.intime}}</td>
@@ -69,14 +73,14 @@
         </div>
         <div class="modal-body">
           <div class="row" style="margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!attendanceForm.controls['employee'].valid && attendanceForm.controls['employee'].touched}">
-               
+            <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':!attendanceForm.controls['employee'].valid && attendanceForm.controls['employee'].touched}">
+
               <label class="label-name control-label">{{ 'EmployeeId' | translate }}</label>
-              <select class="loginUserid demo form-control" formControlName="employee" name="employee" id="employee"   > 
+              <select class="loginUserid demo form-control" formControlName="employee" name="employee" id="employee">
                 <option *ngFor=" let employee of allEmployee" [value]="employee.id">
                   {{employee.userid}}
                 </option>
-                
+
               </select>
               <app-control-messages [formGroup]="attendanceForm" [displayName]="'Employe Id'" [control]="attendanceForm.controls['employee']"></app-control-messages>
             </div>
@@ -92,7 +96,7 @@
             <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':!attendanceForm.controls['outtime'].valid && attendanceForm.controls['outtime'].touched}">
               <label class="label-name control-label">{{ 'OutTime' | translate }}</label>
               <br>
-              <input type="time" step="0" formControlName="outtime" class="loginUserid form-control" (blur)="timeValidation()"(change)="timeValidation()" >
+              <input type="time" step="0" formControlName="outtime" class="loginUserid form-control" (blur)="timeValidation()" (change)="timeValidation()">
               <div class="error" id="outtime_validation"></div>
               <app-control-messages [formGroup]="attendanceForm" [displayName]="'Out Time'" [control]="attendanceForm.controls['outtime']"></app-control-messages>
             </div>
