--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -15,5 +15,7 @@
 </div>
 
 <div id="toastbar" [innerHTML]="toast"></div>
+
 <button class="btn btn-primary logoutbtn" type="button" (click)="redirectToLoginPage()" >Log Out
 </button>
+<h1>{{myCookie}}</h1>
