--- a/src/app/components/my-leaveapplication/my-leaveapplication.component.html
+++ b/src/app/components/my-leaveapplication/my-leaveapplication.component.html
@@ -5,26 +5,30 @@
       <div class="heading4">{{'My Leave Applications'|translate}}</div>
     </header>
     <div id="snackbar" [innerHTML]="toastMessage"></div>
-    <table class="table  table-hover table-bordered ">
+    <div layout="row" class="userlist ">{{'My Leave Applications List'|translate}}</div>
+    <table class="table table-striped table-hover table-fixed settable" >
       <thead>
         <tr>
-          <th class="col-xs-2">UserId</th>
-          <th class="col-xs-2">{{ 'Allocated Sick Leave' | translate }}</th>
-          <th class="col-xs-2">{{ 'Allocated Paid Leave' | translate }}</th>
-          <th class="col-xs-2">{{ 'Remaining Sick Leave' | translate }}</th>
-          <th class="col-xs-2">{{ 'Remaining Paid Leave' | translate }}</th>
-          <th class="col-xs-2">{{ 'Remaining Leave' | translate }}</th>       
+          <th class="col-xs-1">{{ 'No' | translate }}</th>
+          <th class="col-xs-2">EmployeeId
+          </th>
+          <th class="col-xs-2">{{ 'Reason' | translate }}</th>
+          <th class="col-xs-2">{{ 'FromDate' | translate }}</th>
+          <th class="col-xs-2">{{ 'Todate' | translate }}</th>
+          <th class="col-xs-3">{{'Leave Type' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let leave of allLeave ">
-        <td >{{leave.employee.userid}} </td>      
-        <td *ngFor="let totalleave of leave.emplyeeLeaveParts">{{totalleave.seekLeave}}</td>
-        <td *ngFor="let totalleave of leave.emplyeeLeaveParts">{{totalleave.paidLeave}}</td>
-        <td *ngFor="let totalleave of leave.emplyeeLeaveParts">{{totalleave.remaningSeekLeave}}</td>  
-        <td *ngFor="let totalleave of leave.emplyeeLeaveParts">{{totalleave.remaningPaidLeave}}</td>      
-        <td *ngFor="let totalleave of leave.emplyeeLeaveParts">{{totalleave.pendingLeave}}</td>       
-      </tr>    
+      <tr *ngFor="let leave of allLeave| paginate: { itemsPerPage: 8, currentPage: p} let i= index">
+        <td class="tablerow col-xs-1">{{i+1}}</td>
+        <td class="tablerow col-xs-2">{{leave.employee.userid}}</td>
+        <td class="tablerow col-xs-2">{{leave.subject}}</td>
+        <td class="tablerow col-xs-2">{{leave.fromDate}}</td>
+        <td class="tablerow col-xs-2">{{leave.toDate}}</td>
+        <td class="tablerow col-xs-3">{{leave.leavetype.name}}</td>
+      </tr>
     </table>
-   
+    <div style="margin-left: 60%">
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
