--- a/src/app/components/selfattendance/selfattendance.component.css
+++ b/src/app/components/selfattendance/selfattendance.component.css
@@ -42,3 +42,23 @@
     border-radius: 50%;
     margin-left: 15px;
 }
+.table-fixed thead {
+    width: 97%;
+   
+  }
+  .table-fixed tbody {
+    height: 250px;
+    overflow-y: auto;
+    width: 100%;
+    
+  }
+  .table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+    display: block;
+  }
+  .table-fixed tbody td, .table-fixed thead > tr> th {
+    float: left;
+    border-bottom-width: 0;
+  }
+.tableft{
+    margin-left: 3%
+}
