--- a/src/app/components/selfattendance/selfattendance.component.html
+++ b/src/app/components/selfattendance/selfattendance.component.html
@@ -18,7 +18,7 @@
             <input type="month" id="date" formControlName="date" class="form-control" style="height: 40px; font-size: 15px" value="MM/YYYY"
               [(ngModel)]="date">
             <div class="input-group-btn">
-              <button class="btn btn-default" style="height: 40px" type="submit" (click)="getAllAttendanceListBYIDandDate()">
+              <button class="btn btn-default" style="height: 40px" type="submit" (click)="getAllAttendanceListBYIDandDate();calculateAllAttendanceListBYIDandDate()">
                 <i class="glyphicon glyphicon-search"></i>
               </button>
             </div>
@@ -31,13 +31,29 @@
       </div>
 
     </div>
+    <table class="table  table-hover table-bordered ">
+      <thead>
+        <tr>
+          <th class="col-xs-2">Total Working Days </th>
+          <th class="col-xs-2">{{ 'Total Hours Required ' | translate }}</th>
+          <th class="col-xs-2">{{ 'Total Hours Worked ' | translate }}</th>
+          <th class="col-xs-2">{{ 'Total Holidays in Month ' | translate }}</th>
+            
+        </tr>
+      </thead>
+      <tr *ngFor="let attework of attendanceWorkInfo ">  
+        <td >{{attework.totalWorkingDay}}</td>
+        <td >{{attework.totalHoursReq}}</td>
+        <td >{{attework.totalHoursWorked}}</td>  
+        <td >{{attework.totalHolidayinMonth}}</td>      
+        
+      </tr>    
+    </table>
     <table class="table table-striped table-hover table-fixed settable" [mfData]="allAttendance" #mf="mfDataTable">
       <thead>
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
-          <th class="col-xs-2">
-            <mfDefaultSorter by="employee.userid" class="col-xs-2">{{'EmployeeId'|translate}}</mfDefaultSorter>
-          </th>
+          <th class="col-xs-2">{{'EmployeeId'|translate}} </th>
           <th class="col-xs-2">{{ 'Intime' | translate }}</th>
           <th class="col-xs-2">{{ 'Outtime' | translate }}</th>
           <th class="col-xs-2" style="margin-right: -20px;">
@@ -47,7 +63,7 @@
 
         </tr>
       </thead>
-      <tr *ngFor="let attendance of mf.data |filter :date | paginate: { itemsPerPage: 8, currentPage: p} let i = index;" [ngStyle]="{'color':attendance.status === 'Leave'|| attendance.status === 'Absent' ? 'red' : 'green' }">
+      <tr *ngFor="let attendance of mf.data | paginate: { itemsPerPage: 8, currentPage: p} let i = index;" [ngStyle]="{'color':attendance.status === 'Leave'|| attendance.status === 'Absent'|| attendance.status === 'Holiday' ? 'red' : 'green' }">
         <td class="tablerow col-xs-1">{{i+1}}</td>
         <td class="tablerow col-xs-2  ">{{attendance.employee.userid}}</td>
         <td class="tablerow col-xs-2">{{attendance.intime}}</td>
@@ -58,6 +74,8 @@
       </tr>
       <div id="data" class="norequest"></div>
     </table>
-
+    <div style="margin-left: 60%">
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
